# TrainDataCollect

./: CMakeLists.txt  main.cpp
lib/NatorsSDK/: CMakeLists.txt
lib/NatorsSDK/examples/: Sample1_Basics.c  Sample2_Simple_Interaction.c  Sample3_Async_Programming.c
lib/NatorsSDK/include/: NTControl.h
lib/WitMotion/: CMakeLists.txt  Main.cpp
